--- a/index.html
+++ b/index.html
@@ -3120,7 +3120,7 @@ height:60px;
    </div>
    <div class="r2">
    <a target="_blank" href="https://smcollegemorrelgonj.jessoreboard.gov.bd/">
-   <img src="sm college.Jpg" alt="" width="100%" height="100%"/>            </a>
+   <img src="College.jpg" alt="" width="100%" height="100%"/>            </a>
    
    </div>
    <div class="r2">
