--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
 		<li>
 		
 		         	<a target="_blank" href="https://smcollegemorrelgonj.jessoreboard.gov.bd/">
-                <img src="College.jpg" alt="" width="960" height="220"/>            </a>
+                <img src="https://raselweb.github.io/bangladesh.gov.bd/College.jpg" alt="" width="960" height="220"/>            </a>
             		
 		</li>
 		
