--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
 		<li>
 		
 		         	<a target="_blank" href="site/view/eservices/%e0%a6%aa%e0%a6%be%e0%a6%b8%e0%a6%aa%e0%a7%8b%e0%a6%b0%e0%a7%8d%e0%a6%9f%2c%20%e0%a6%ad%e0%a6%bf%e0%a6%b8%e0%a6%be%20%e0%a6%93%20%e0%a6%87%e0%a6%ae%e0%a6%bf%e0%a6%97%e0%a7%8d%e0%a6%b0%e0%a7%87%e0%a6%b6%e0%a6%a8.html">
-                <img src="sites/default/files/files/bangladesh.gov.bd/top_banner/3671a4bc_6191_4e15_b3d5_40cc96ac2c81/banner-renew-your-passport.png" alt="" width="960" height="220"/>            </a>
+                <img src="http://nu.ac.bd/uploads/2018/slide-image-2.jpg" alt="" width="960" height="220"/>            </a>
             		
 		</li>
 		<li>
