--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 		</li>
 		<li>
 		
-		         	<a target="_blank" href="site/page/812d94a8-0376-4579-a8f1-a1f66fa5df5d.html">
+		         	<a target="_blank" href="https://bangladesh.gov.bd/index.php">
                 <img src="sites/default/files/files/bangladesh.gov.bd/top_banner/26bad4db_15b3_49da_91ad_980595d0fb93/our_pride.png" alt="" width="960" height="220"/>            </a>
             		
 		</li>
