--- a/index.html
+++ b/index.html
@@ -3608,7 +3608,7 @@ font-size:13px;
   <div class="k">
   <h3><q>ওয়েব ডিজাইনার</q></h3>
   
-  <img src="2."width="250px"height="200">
+  <img src="https://kmrasel9748.github.io/tk/bteb.gov.bd/site/office_head/9e8a2004-c9b6-4d40-a2dc-a5492f44a805/2.jpg"width="250px"height="200">
   <h4>কে,এম রাসেল,<span>বি.এ (অনার্স)</span></h4>
   <hk><a href="https://kmrasel9748.github.io/tk/bteb.gov.bd/site/office_head/78842d59-651b-490b-b6aa-b5dd63e25525/%e0%a6%ac%e0%a6%bf%e0%a6%b8%e0%a7%8d%e0%a6%a4%e0%a6%be%e0%a6%b0%e0%a6%bf%e0%a6%a4.html">বিস্তারিত.....</a></hk>
   </div>
