--- a/index.html
+++ b/index.html
@@ -348,8 +348,8 @@
                             <ul class="rslides" id="front-image-slider">
 		<li>
 		
-		         	<a target="_blank" href="site/view/gurd_files_category/%e0%a6%a1%e0%a6%bf%e0%a6%9c%e0%a6%bf%e0%a6%9f%e0%a6%be%e0%a6%b2%20%e0%a6%97%e0%a6%be%e0%a6%b0%e0%a7%8d%e0%a6%a1%20%e0%a6%ab%e0%a6%be%e0%a6%87%e0%a6%b2.html">
-                <img src="sites/default/files/files/bangladesh.gov.bd/top_banner/5de48287_9fc5_4c0d_8cac_1d606a881ac6/6.jpg" alt="" width="960" height="220"/>            </a>
+		         	<a target="_blank" href="https://www.youtube.com/channel/UCoNLjOAI-R2IWssxwuvuNMQ">
+                <img src="youtube.JPG" alt="" width="960" height="220"/>            </a>
             		
 		</li>
 		<li>
