--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
                            <div class="eservice-cat">
                            <a href="https://kmrasel9748.github.io/tk/bteb.gov.bd/site/page/4df44549-07e8-42ef-800d-4e7fe0981836/%E0%A6%AB%E0%A6%B0%E0%A6%AE(100).html">
                            <img src="sites/default/files/files/bangladesh.gov.bd/eservice_cat_icon/187bc022_faac_49ea_8f86_edfa97c6c43e/govt_admision.png" alt="" width="" height=""/>                                </a>
-                           <a href="site/view/eservices/%e0%a6%a8%e0%a6%bf%e0%a7%9f%e0%a7%8b%e0%a6%97%20%e0%a6%b8%e0%a6%82%e0%a6%95%e0%a7%8d%e0%a6%b0%e0%a6%be%e0%a6%a8%e0%a7%8d%e0%a6%a4" class="service-type">
+                           <a href="https://kmrasel9748.github.io/tk/bteb.gov.bd/site/page/4df44549-07e8-42ef-800d-4e7fe0981836/%E0%A6%AB%E0%A6%B0%E0%A6%AE(100).html" class="service-type">
                            ক্লাস রুটিন                                </a>
                            </div>
                            
