--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     <div class="full-row">
                         <div class="infographic-menu-first">
                             <span id="infogra-corner" class="infogra-corner"></span>
-                                                                    <a href="site/view/ministry_n_directorate_list/%e0%a6%ae%e0%a6%a8%e0%a7%8d%e0%a6%a4%e0%a7%8d%e0%a6%b0%e0%a6%a3%e0%a6%be%e0%a6%b2%e0%a7%9f-%e0%a6%93-%e0%a6%ac%e0%a6%bf%e0%a6%ad%e0%a6%be%e0%a6%97%e0%a6%b8%e0%a6%ae%e0%a7%82%e0%a6%b9.html" id="infogra-first-item" class="infogra-menu-item-selected">
+                                                                    <a href="https://bangladesh.gov.bd/site/view/ministry_n_directorate_list/%e0%a6%ae%e0%a6%a8%e0%a7%8d%e0%a6%a4%e0%a7%8d%e0%a6%b0%e0%a6%a3%e0%a6%be%e0%a6%b2%e0%a7%9f-%e0%a6%93-%e0%a6%ac%e0%a6%bf%e0%a6%ad%e0%a6%be%e0%a6%97%e0%a6%b8%e0%a6%ae%e0%a7%82%e0%a6%b9.html" id="infogra-first-item" class="infogra-menu-item-selected">
                                                                                             <span class="infogra-num">
                                                     ৫৮ </span>
                                                 <span class="infogra-txt">
