--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     <div class="full-row">
                         <div class="infographic-menu-first">
                             <span id="infogra-corner" class="infogra-corner"></span>
-                                                                    <a href="https://bangladesh.gov.bd/site/view/ministry_n_directorate_list/%e0%a6%ae%e0%a6%a8%e0%a7%8d%e0%a6%a4%e0%a7%8d%e0%a6%b0%e0%a6%a3%e0%a6%be%e0%a6%b2%e0%a7%9f-%e0%a6%93-%e0%a6%ac%e0%a6%bf%e0%a6%ad%e0%a6%be%e0%a6%97%e0%a6%b8%e0%a6%ae%e0%a7%82%e0%a6%b9.html" id="infogra-first-item" class="infogra-menu-item-selected">
+                                                                    <a href="https://bangladesh.gov.bd/site/view/ministry_n_directorate_list/%E0%A6%AE%E0%A6%A8%E0%A7%8D%E0%A6%A4%E0%A7%8D%E0%A6%B0%E0%A6%A3%E0%A6%BE%E0%A6%B2%E0%A7%9F-%E0%A6%93-%E0%A6%AC%E0%A6%BF%E0%A6%AD%E0%A6%BE%E0%A6%97%E0%A6%B8%E0%A6%AE%E0%A7%82%E0%A6%B9" id="infogra-first-item" class="infogra-menu-item-selected">
                                                                                             <span class="infogra-num">
                                                     ৫৮ </span>
                                                 <span class="infogra-txt">
@@ -162,7 +162,7 @@
                         </div>
 
                         <div class="infographic-menu-second">
-                                                                    <a href="site/page/3c1910f1-686d-4a57-9400-0b2743241438/%e0%a6%85%e0%a6%a7%e0%a6%bf%e0%a6%a6%e0%a6%aa%e0%a7%8d%e0%a6%a4%e0%a6%b0-%e0%a6%93-%e0%a6%85%e0%a6%a8%e0%a7%8d%e0%a6%af%e0%a6%be%e0%a6%a8%e0%a7%8d%e0%a6%af-%e0%a6%85%e0%a6%ab%e0%a6%bf%e0%a6%b8.html" class="infogra-menu-item-second">
+                                                                    <a href="https://bangladesh.gov.bd/site/page/3c1910f1-686d-4a57-9400-0b2743241438/%E0%A6%85%E0%A6%A7%E0%A6%BF%E0%A6%A6%E0%A6%AA%E0%A7%8D%E0%A6%A4%E0%A6%B0-%E0%A6%93-%E0%A6%85%E0%A6%A8%E0%A7%8D%E0%A6%AF%E0%A6%BE%E0%A6%A8%E0%A7%8D%E0%A6%AF-%E0%A6%85%E0%A6%AB%E0%A6%BF%E0%A6%B8" class="infogra-menu-item-second">
                                                                                             <span class="infogra-num">
                                                     ৩৫৩ </span>
                                                 <span class="infogra-txt">
@@ -172,7 +172,7 @@
                         </div>
 
                         <div class="infographic-menu-third">
-                                                                    <a href="site/view/division-list/%e0%a6%ac%e0%a6%bf%e0%a6%ad%e0%a6%be%e0%a6%97%e0%a6%b8%e0%a6%ae%e0%a7%82%e0%a6%b9.html" class="infogra-menu-item-third">
+                                                                    <a href="https://bangladesh.gov.bd/site/view/division-list/%E0%A6%AC%E0%A6%BF%E0%A6%AD%E0%A6%BE%E0%A6%97%E0%A6%B8%E0%A6%AE%E0%A7%82%E0%A6%B9" class="infogra-menu-item-third">
                                                                                             <span class="infogra-num">
                                                     ৮                                                </span>
                                                 <span class="infogra-txt">
@@ -181,7 +181,7 @@
                         </div>
 
                         <div class="infographic-menu-fourth">
-                                                                    <a href="site/view/district-list/%e0%a6%9c%e0%a7%87%e0%a6%b2%e0%a6%be%e0%a6%b8%e0%a6%ae%e0%a7%82%e0%a6%b9.html" class="infogra-menu-item-fourth">
+                                                                    <a href="https://bangladesh.gov.bd/site/view/district-list/%E0%A6%9C%E0%A7%87%E0%A6%B2%E0%A6%BE%E0%A6%B8%E0%A6%AE%E0%A7%82%E0%A6%B9" class="infogra-menu-item-fourth">
                                                                                             <span class="infogra-num">
                                                     ৬৪                                                </span>
                                                 <span class="infogra-txt">
@@ -190,7 +190,7 @@
                         </div>
 
                         <div class="infographic-menu-fifth">
-                                                                    <a href="site/view/upazila-list/%e0%a6%89%e0%a6%aa%e0%a6%9c%e0%a7%87%e0%a6%b2%e0%a6%be-%e0%a6%b8%e0%a6%ae%e0%a7%82%e0%a6%b9.html" class="infogra-menu-item-fifth">
+                                                                    <a href="https://bangladesh.gov.bd/site/view/upazila-list/%E0%A6%89%E0%A6%AA%E0%A6%9C%E0%A7%87%E0%A6%B2%E0%A6%BE-%E0%A6%B8%E0%A6%AE%E0%A7%82%E0%A6%B9" class="infogra-menu-item-fifth">
                                                                                             <span class="infogra-num">
                                                     ৪৯১                                                </span>
                                                 <span class="infogra-txt">
@@ -199,7 +199,7 @@
                         </div>
 
                         <div class="infographic-menu-sixth">
-                                                                    <a href="site/view/union-list/%e0%a6%87%e0%a6%89%e0%a6%a8%e0%a6%bf%e0%a6%af%e0%a6%bc%e0%a6%a8-%e0%a6%b8%e0%a6%ae%e0%a7%82%e0%a6%b9.html" class="infogra-menu-item-sixth">
+                                                                    <a href="https://bangladesh.gov.bd/site/view/union-list/%E0%A6%87%E0%A6%89%E0%A6%A8%E0%A6%BF%E0%A6%AF%E0%A6%BC%E0%A6%A8-%E0%A6%B8%E0%A6%AE%E0%A7%82%E0%A6%B9"  class="infogra-menu-item-sixth">
                                                                                             <span class="infogra-num">
                                                     ৪৫৫৪                                                </span>
                                                 <span class="infogra-txt">
