--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
 	<h4><b>খবরঃ</b></h4>
 		
 	</div>
-	<div class="ns2"><marquee>স্বাগতম আমার নতুন ডিজিটার শিক্ষাগত ওয়েবসাইট পরিদর্শনের জন্য</marquee>
+	<div class="ns2"><marquee>স্বাগতম আমার নতুন ডিজিটার শিক্ষাগত ওয়েবসাইট পরিদর্শনের জন্য.জাতীয় বিশ্ববিদ্যালয়ের অধীনে অনার্স দ্বিতীয় বর্ষ ২০১৯ এর পরীক্ষা অনুষ্ঠিত হতে যাচ্ছে আগামী ০৯/১১/২০১৯ খ্রীঃ</marquee>
 	</div>
 	</div>
 	
