--- a/index.html
+++ b/index.html
@@ -4057,10 +4057,10 @@ margin-top:5px;
                     <div id="footer-menu">
                         <div class="ten columns">
 
-                            <ul><li><a href="site/page/f74d9929-0211-42d4-ab5b-cd6512baf642/%e0%a6%97%e0%a7%8b%e0%a6%aa%e0%a6%a8%e0%a7%80%e0%a7%9f%e0%a6%a4%e0%a6%be%e0%a6%b0-%e0%a6%a8%e0%a7%80%e0%a6%a4%e0%a6%bf%e0%a6%ae%e0%a6%be%e0%a6%b2%e0%a6%be.html">গোপনীয়তার নীতিমালা</a></li><li><a href="site/page/6ff38d18-49e4-4b48-bb47-2fcbae1946af/%e0%a6%ac%e0%a7%8d%e0%a6%af%e0%a6%ac%e0%a6%b9%e0%a6%be%e0%a6%b0%e0%a7%87%e0%a6%b0-%e0%a6%b6%e0%a6%b0%e0%a7%8d%e0%a6%a4%e0%a6%be%e0%a6%ac%e0%a6%b2%e0%a6%bf.html">ব্যবহারের শর্তাবলি</a></li><li><a href="site/page/4965b205-6b03-4f83-b1a2-0ea31174a007/%e0%a6%b8%e0%a6%be%e0%a6%b0%e0%a7%8d%e0%a6%ac%e0%a6%bf%e0%a6%95-%e0%a6%b8%e0%a6%b9%e0%a6%af%e0%a7%8b%e0%a6%97%e0%a6%bf%e0%a6%a4%e0%a6%be%e0%a7%9f.html">সার্বিক সহযোগিতায়</a></li><li><a href="site/view/sitemap/%e0%a6%b8%e0%a6%be%e0%a6%87%e0%a6%9f-%e0%a6%ae%e0%a7%8d%e0%a6%af%e0%a6%be%e0%a6%aa.html">সাইট ম্যাপ</a></li><li><a href="site/page/a361be41-a8c2-4568-b4a3-6fb1bc6e030a/%e0%a6%b8%e0%a6%9a%e0%a6%b0%e0%a6%be%e0%a6%9a%e0%a6%b0-%e0%a6%9c%e0%a6%bf%e0%a6%9c%e0%a7%8d%e0%a6%9e%e0%a6%be%e0%a6%b8%e0%a6%be.html">সচরাচর জিজ্ঞাসা</a></li></ul>
+                            <ul><li><a href="#">আমার পূর্বের ওয়েবসাইট সমূহঃ</a></li><li><a href="#">কারিগরি শিক্ষাবোর্ড ডিজাইন</a></li><li><a href="#">ব্লগ সাইট</a></li><li><a href="#">প্রথম অভিজ্ঞতা</a></li></ul>
                             <div class="full-row">
                                                                 <div style="float:left; margin-left:20px; font-size:.9em;">
-                                    সাইটটি শেষ হাল-নাগাদ করা হয়েছে:
+                                    সাইটটি শেষ হাল-নাগাদ করা হয়েছে:০১/০১/২০২০ইং ১২:০১ 
                                     <span style="font-style:italic;">
                                         &#x09E8;&#x09E6;&#x09E7;&#x09EF;-&#x09E6;&#x09ED;-&#x09E7;&#x09E7; &#x09E7;&#x09E6;:&#x09E8;&#x09EE;:&#x09E8;&#x09EB;                                    </span>
                                 </div>
@@ -4097,7 +4097,7 @@ margin-top:5px;
 
                             <div class="full-row">
                                 <span>
-                                    কারিগরি সহায়তায়:                                </span>
+                                    কারিগরি সহায়তায়: কে,এম রাসেল ওয়েব ডিজাইনার;Html & Css                              </span>
                                 <a target="_blank" href="../external.html?link=http://a2i.gov.bd/">
                                     <img src="themes/responsive_npf/templates/bangladesh/images/a2i-logo-footer.png" />
                                 </a>
