--- a/index.html
+++ b/index.html
@@ -420,15 +420,16 @@
 	</div>
 	<div class="notice-list"> 
 	
-	➤ <a href="site/view/upazila-list/%E0%A6%B8%E0%A7%8D%E0%A6%AC%E0%A6%BE%E0%A6%97%E0%A6%A4%E0%A6%AE.html" ><kkk>স্বাগতম আমার নতুন ডিজিটাল ওয়েবসাইট পরিদর্শনের জন্য। পরিদর্শন করুন আমার নতুন অভিজ্ঞতা</kkk><br>
+	 ☞<a href="site/view/upazila-list/%E0%A6%B8%E0%A7%8D%E0%A6%AC%E0%A6%BE%E0%A6%97%E0%A6%A4%E0%A6%AE.html" ><kkk>স্বাগতম আমার নতুন ডিজিটাল ওয়েবসাইট পরিদর্শনের জন্য। পরিদর্শন করুন আমার নতুন অভিজ্ঞতা</kkk><br>
 	</a>
-	➤ <a href="site/view/upazila-list/%E0%A6%95%E0%A6%B2%E0%A7%87%E0%A6%9C%20%E0%A6%AA%E0%A6%B0%E0%A7%80%E0%A6%95%E0%A7%8D%E0%A6%B7%E0%A6%BE%E0%A6%A6%E0%A7%8D%E0%A6%AC%E0%A7%9F.html" ><kkk>বি,এ অনার্স কোর্সের সকল চলতি পরীক্ষাদ্বয়ের সময় সূচি ও প্রোগ্রাম সমূহের বিশ্লেষন</kkk><br>
+	
+	<a href="site/view/upazila-list/%E0%A6%95%E0%A6%B2%E0%A7%87%E0%A6%9C%20%E0%A6%AA%E0%A6%B0%E0%A7%80%E0%A6%95%E0%A7%8D%E0%A6%B7%E0%A6%BE%E0%A6%A6%E0%A7%8D%E0%A6%AC%E0%A7%9F.html" ><kkk>বি,এ অনার্স কোর্সের সকল চলতি পরীক্ষাদ্বয়ের সময় সূচি ও প্রোগ্রাম সমূহের বিশ্লেষন</kkk><br>
 	</a>
-	➤ <a href="http://nu.ac.bd/uploads/2018/notice_20093_pub_date_25082019.pdf" ><kkk>অনার্স কোর্স চলাকালিন জাতীয় বিশ্ববিদ্যালয়ের শিক্ষা সম্প্রর্কিত বিষয়াবলির বিজ্ঞপ্তি সমূহ</kkk><br>
+	 ☞<a href="http://nu.ac.bd/uploads/2018/notice_20093_pub_date_25082019.pdf" ><kkk>অনার্স কোর্স চলাকালিন জাতীয় বিশ্ববিদ্যালয়ের শিক্ষা সম্প্রর্কিত বিষয়াবলির বিজ্ঞপ্তি সমূহ</kkk><br>
 	</a>
-	➤ <a href="https://kmrasel9748.github.io/tk/bteb.gov.bd/site/page/f15b9974-45a8-4b5e-aed8-8f8af4025f12/%E0%A6%86%E0%A6%87%E0%A6%A8-%E0%A6%AC%E0%A6%BF%E0%A6%A7%E0%A6%BF-%E0%A6%A8%E0%A7%80%E0%A6%A4%E0%A6%BF%E0%A6%AE%E0%A6%BE%E0%A6%B2%E0%A6%BE(1).html" ><kkk>জাতীয় বিশ্ববিদ্যালয়ের স্নাতক সম্মান কোর্সের বাংলা ডিপার্টমেন্টের ২য় বর্ষের সিলেবাস ভিক্তিক পাঠ্যসূচি</kkk><br>
+	☞<a href="https://kmrasel9748.github.io/tk/bteb.gov.bd/site/page/f15b9974-45a8-4b5e-aed8-8f8af4025f12/%E0%A6%86%E0%A6%87%E0%A6%A8-%E0%A6%AC%E0%A6%BF%E0%A6%A7%E0%A6%BF-%E0%A6%A8%E0%A7%80%E0%A6%A4%E0%A6%BF%E0%A6%AE%E0%A6%BE%E0%A6%B2%E0%A6%BE(1).html" ><kkk>জাতীয় বিশ্ববিদ্যালয়ের স্নাতক সম্মান কোর্সের বাংলা ডিপার্টমেন্টের ২য় বর্ষের সিলেবাস ভিক্তিক পাঠ্যসূচি</kkk><br>
 	</a>
-	➤ <a href="https://kmrasel9748.github.io/tk/bteb.gov.bd/site/page/4df44549-07e8-42ef-800d-4e7fe0981836/%E0%A6%AB%E0%A6%B0%E0%A6%AE(100).html" ><kkk>জাতীয় বিশ্ববিদ্যালয়ের স্নাতক সম্মান কোর্সের বাংলা ডিপার্টমেন্টের ২য় বর্ষের ক্লাস রুটিন ২০১৯</kkk></a>
+	☞<a href="https://kmrasel9748.github.io/tk/bteb.gov.bd/site/page/4df44549-07e8-42ef-800d-4e7fe0981836/%E0%A6%AB%E0%A6%B0%E0%A6%AE(100).html" ><kkk>জাতীয় বিশ্ববিদ্যালয়ের স্নাতক সম্মান কোর্সের বাংলা ডিপার্টমেন্টের ২য় বর্ষের ক্লাস রুটিন ২০১৯</kkk></a>
 	
 	</div>
 	</div>
@@ -4060,7 +4061,7 @@ margin-top:5px;
                             <ul><li><a href="#">আমার পূর্বের ওয়েবসাইট সমূহঃ</a></li><li><a href="#">কারিগরি শিক্ষাবোর্ড ডিজাইন</a></li><li><a href="#">ব্লগ সাইট</a></li><li><a href="#">প্রথম অভিজ্ঞতা</a></li></ul>
                             <div class="full-row">
                                                                 <div style="float:left; margin-left:20px; font-size:.9em;">
-                                    সাইটটি শেষ হাল-নাগাদ করা হয়েছে:০১/০১/২০২০ইং ১২:০১ 
+                                    সাইটটি শেষ হাল-নাগাদ করা হয়েছে:
                                     <span style="font-style:italic;">
                                         &#x09E8;&#x09E6;&#x09E7;&#x09EF;-&#x09E6;&#x09ED;-&#x09E7;&#x09E7; &#x09E7;&#x09E6;:&#x09E8;&#x09EE;:&#x09E8;&#x09EB;                                    </span>
                                 </div>
@@ -4097,7 +4098,7 @@ margin-top:5px;
 
                             <div class="full-row">
                                 <span>
-                                    কারিগরি সহায়তায়: কে,এম রাসেল ওয়েব ডিজাইনার;Html & Css                              </span>
+                                    কারিগরি সহায়তায়: কে,এম রাসেল                             </span>
                                 <a target="_blank" href="../external.html?link=http://a2i.gov.bd/">
                                     <img src="themes/responsive_npf/templates/bangladesh/images/a2i-logo-footer.png" />
                                 </a>
