--- a/index.html
+++ b/index.html
@@ -383,10 +383,10 @@
 		<li>
 			
 		
-		            	
-                <img src="sites/default/files/files/bangladesh.gov.bd/top_banner/29875a08_a847_43b6_9673_2cf0052e2a4e/pmobanner.jpg" alt="" width="960" height="220"/>   
+		            <a target="_blank" href="https://www.cricbuzz.com/">	
+                <img src="https://www.cricbuzz.com/a/img/v1/650x0/i1/c181743/after-umesh-yadavs-cameo-of-1.jpg" alt="" width="960" height="220"/>   
 			
-
+</a>
             		
 		</li>
 		<li>
