--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
 		<li>
 		
 		         	<a target="_blank" href="https://bka.sh/signup?ref=C1934FR31">
-                <img src="bkash.JPG" alt="" width="960" height="220"/>            </a>
+                <img src="IMG_20191015_063428.JPG" alt="" width="960" height="220"/>            </a>
             		
 		</li>
 		<li>
