--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
 	
 		<a href="site/view/upazila-list/%E0%A6%95%E0%A6%B2%E0%A7%87%E0%A6%9C%20%E0%A6%AA%E0%A6%B0%E0%A7%80%E0%A6%95%E0%A7%8D%E0%A6%B7%E0%A6%BE%E0%A6%A6%E0%A7%8D%E0%A6%AC%E0%A7%9F.html" ><kkk>বি,এ অনার্স কোর্সের সকল চলতি পরীক্ষাদ্বয়ের সময় সূচি ও প্রোগ্রাম সমূহের বিশ্লেষন</kkk><br>
 	</a>
-	 ☞ <a href="http://nu.ac.bd/uploads/2018/notice_20093_pub_date_25082019.pdf" ><kkk>অনার্স কোর্স চলাকালিন জাতীয় বিশ্ববিদ্যালয়ের শিক্ষা সম্প্রর্কিত বিষয়াবলির বিজ্ঞপ্তি সমূহ</kkk><br>
+	 ☞ <a href="https://nubd24.com/" ><kkk>অনার্স কোর্স চলাকালিন জাতীয় বিশ্ববিদ্যালয়ের শিক্ষা সম্প্রর্কিত বিষয়াবলির বিজ্ঞপ্তি সমূহ</kkk><br>
 	</a>
 	☞ <a href="https://kmrasel9748.github.io/tk/bteb.gov.bd/site/page/f15b9974-45a8-4b5e-aed8-8f8af4025f12/%E0%A6%86%E0%A6%87%E0%A6%A8-%E0%A6%AC%E0%A6%BF%E0%A6%A7%E0%A6%BF-%E0%A6%A8%E0%A7%80%E0%A6%A4%E0%A6%BF%E0%A6%AE%E0%A6%BE%E0%A6%B2%E0%A6%BE(1).html" ><kkk>জাতীয় বিশ্ববিদ্যালয়ের স্নাতক সম্মান কোর্সের বাংলা ডিপার্টমেন্টের ২য় বর্ষের সিলেবাস ভিক্তিক পাঠ্যসূচি</kkk><br>
 	</a>
