--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                     </div>
                     <div class="full-row srs-social-row">
                         <div class="navigation">
-                            <form action="../external.html?link=https://bangladesh.gov.bd/site/search" name="search" class="srs-form">
+                            <form action="https://bangladesh.gov.bd/site/search" name="search" class="srs-form">
                                 <input type="submit" value="অনুসন্ধান " class="srs-icon" />
                                 <input type="text" id="search" name="key" class="srs-field" placeholder="খুঁজুন " />
                             </form>
