--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <div class="sixteen columns logosocial">
                 <div class="six columns logo">
                     <a href="index-2.html">
-                                                    <img alt="গণপ্রজাতন্ত্রী বাংলাদেশ" src="logo2.png"width="360"height="80"/>
+                                                    <img alt="গণপ্রজাতন্ত্রী বাংলাদেশ" src="logoR.JPG"width="360"height="80"/>
 			    
                                                 </a>
 
