--- a/index.html
+++ b/index.html
@@ -410,11 +410,12 @@
 	<h4><b>খবরঃ</b></h4>
 		
 	</div>
-	<div class="ns2">
+	<div class="ns2"><marquee scrolldelay="500">
 		
 		
+	
 		
-		<marquee><a href="#" >স্বাগতম আমার নতুন ডিজিটাল শিক্ষাগত ওয়েবসাইট পরিদর্শনের জন্য। জাতীয় বিশ্ববিদ্যালয়ের অধীনে অনার্স দ্বিতীয় বর্ষের পরীক্ষা অনুষ্ঠিত হতে যাচ্ছে আগামী ৯/১১/২০১৯ ইং এবং শেষ হবে ১০/১২/২০১৯।</a>
+		<a href="#" >স্বাগতম আমার নতুন ডিজিটাল শিক্ষাগত ওয়েবসাইট পরিদর্শনের জন্য। জাতীয় বিশ্ববিদ্যালয়ের অধীনে অনার্স দ্বিতীয় বর্ষের পরীক্ষা অনুষ্ঠিত হতে যাচ্ছে আগামী ৯/১১/২০১৯ ইং এবং শেষ হবে ১০/১২/২০১৯।</a>
 	<a href="" > জুনিয়র স্কুল এন্ড মাদ্রাসার পরীক্ষা শুরু হতে যাচ্ছে ০২/১১/২০১৯।</a>
 	<a href="" >মাধ্যমিক স্কুল এন্ড মাদ্রাসার কেন্দ্রীয় পরীক্ষা অনুষ্ঠিত হতে যাচ্ছে আগামী ০২/০২/২০২০ ইং।</a>
 	</marquee>
