--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 				
 				
 				<li>
-					<section>
+					<section class="datetime-section">
 					<div class="date">                            
 
 				<i class="fa fa-calendar" aria-hidden="true"></i>                            
