--- a/index.html
+++ b/index.html
@@ -104,7 +104,13 @@
             <div class="sixteen columns">
                 <div class="slide-panel-btns">
                     <div class="twelve columns">
-                                                <div class="slide-panel-button" style="display: block;">আমার ডিজিটাল শিক্ষাগত ওয়েবসাইট </div>
+                                                <div class="slide-panel-button" style="display: block;">আমার ডিজিটাল শিক্ষাগত ওয়েবসাইট 
+			    
+			    <div class="time">
+                            <i class="fa fa-clock-o" aria-hidden="true"></i>
+                            <span id="show_time"></span>
+                            </div>
+			    </div>
 
                                             </div>
 
@@ -182,10 +188,7 @@
                         </li>
 				    
 				    <li>
-					    <div class="time">
-                            <i class="fa fa-clock-o" aria-hidden="true"></i>
-                            <span id="show_time"></span>
-                            </div>
+					    ##
 				    </li>
 
                     </ul>
