--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
                            <div class="eservice-cat">
                            <a href="site/view/upazila-list/%E0%A6%B6%E0%A6%BF%E0%A6%95%E0%A7%8D%E0%A6%B7%E0%A6%BE%20%E0%A6%B8%E0%A6%82%E0%A6%95%E0%A7%8D%E0%A6%B0%E0%A6%BE%E0%A6%A8%E0%A7%8D%E0%A6%A4%20%E0%A6%A4%E0%A6%A5%E0%A7%8D%E0%A6%AF%E0%A6%BE%E0%A6%AC%E0%A6%B2%E0%A6%BF.html">
                            <img src="sites/default/files/files/bangladesh.gov.bd/eservice_cat_icon/7cd28427_4f64_4c1d_b7c4_bc2fa3b5871a/apply_education.png" alt="" width="" height=""/>                                </a>
-                           <a href="site/view/eservices/%e0%a6%b6%e0%a6%bf%e0%a6%95%e0%a7%8d%e0%a6%b7%e0%a6%be-%e0%a6%ac%e0%a6%bf%e0%a6%b7%e0%a7%9f%e0%a6%95.html" class="service-type">
+                           <a href="/site/view/job/all.html" class="service-type">
                            শিক্ষা-বিষয়ক                                </a>
                            </div>
                            
