--- a/index.html
+++ b/index.html
@@ -3851,8 +3851,8 @@ font-size:13px;
   <div class="batayon-con select-all-portal">
   <select id="np-div-list">
   <option selected="" value="">ওয়েবসাইট বাছাই করুন</option>
-  <option url="site/view/ministry_n_directorate_list.html" value="">মন্ত্রণালয়</option>
-  <option url="site/page/3c1910f1-686d-4a57-9400-0b2743241438.html" value="">অধিদপ্তর </option>
+  <option url="http://bangladesh.gov.bd/site/view/ministry_n_directorate_list.html" value="">মন্ত্রণালয়</option>
+  <option url="http://bangladesh.gov.bd/site/page/3c1910f1-686d-4a57-9400-0b2743241438.html" value="">অধিদপ্তর </option>
   <option url="http://www.dhakadiv.gov.bd/" value="68">ঢাকা বিভাগ</option>
   <option url="http://www.chittagongdiv.gov.bd/" value="36">চট্টগ্রাম বিভাগ</option>
   <option url="http://www.rajshahidiv.gov.bd/" value="60">রাজশাহী বিভাগ</option>
