--- a/index.html
+++ b/index.html
@@ -530,7 +530,11 @@
 	<h4><b>খবরঃ</b></h4>
 		
 	</div>
-	<div class="ns2"><marquee scrolldelay="500">
+	<div class="ns2">
+		<marquee>
+		
+		
+		
 		
 		
 	
