--- a/index.html
+++ b/index.html
@@ -3727,6 +3727,7 @@ font-size:13px;
   </div>
   
   </div>
+	   <iframe scrolling="no" frameborder="no" clocktype="html5" style="overflow:hidden;border:0;margin:0;padding:0;width:300px;height:75px;"src="https://www.clocklink.com/html5embed.php?clock=038&timezone=GMT-0600&color=black&size=300&Title=&Message=&Target=&From=2019,1,1,0,0,0&Color=black"></iframe>
   <div class="m">
   <h3><q>স্নাতক সম্মান ডিগ্রিধারী</q></h3>
   
