--- a/index.html
+++ b/index.html
@@ -515,7 +515,15 @@
 		
 	
 		
-		<a href="#" >স্বাগতম আমার নতুন ডিজিটাল শিক্ষাগত ওয়েবসাইট পরিদর্শনের জন্য। জাতীয় বিশ্ববিদ্যালয়ের অধীনে অনার্স দ্বিতীয় বর্ষের পরীক্ষা অনুষ্ঠিত হতে যাচ্ছে আগামী ৯/১১/২০১৯ ইং এবং শেষ হবে ১০/১২/২০১৯।</a>
+		<a href="#" >স্বাগতম আমার নতুন ডিজিটাল শিক্ষাগত ওয়েবসাইট পরির্শনের জন্য। "জাতীয় বিশ্ববিদ্যালয়ের অধীনে অনুষ্ঠিতব্য
+
+আগামী ০৯/১১/২০১৯ তারিখের সকল পরীক্ষা
+
+দুর্যোগপূর্ণ আবহাওয়ার কারনে স্থগিত ঘোষণা করা
+
+হল। এ সকল পরীক্ষার পরিবর্তিত তারিখ ও সময়
+
+সংশ্লিষ্ট সকলকে পরবর্তীতে অবহিত করা হবে।</a>
 	<a href="" > জুনিয়র স্কুল এন্ড মাদ্রাসার পরীক্ষা শুরু হতে যাচ্ছে ০২/১১/২০১৯।</a>
 	<a href="" >মাধ্যমিক স্কুল এন্ড মাদ্রাসার কেন্দ্রীয় পরীক্ষা অনুষ্ঠিত হতে যাচ্ছে আগামী ০২/০২/২০২০ ইং।</a>
 	</marquee>
