--- a/index.html
+++ b/index.html
@@ -4031,15 +4031,10 @@ margin-top:5px;
 <script></script>
 	  <style>
 
-form{width:150px;height:100px;border:1px solid silver;
+ 
 
-}
 
-textarea{
-
-width:150px;
-
-}</style>
+</style>
 
 <form action="/html/tags/html_form_tag_action.cfm" method="post">
 
