--- a/index.html
+++ b/index.html
@@ -4029,26 +4029,12 @@ margin-top:5px;
 </style>
 
 <script></script>
-	  <style>
+	  <div id="fb-root"></div>
 
- 
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v5.0"></script>
 
-
-</style>
-
-<form action="/html/tags/html_form_tag_action.cfm" method="post">
-
-<div>
-
-<textarea name="comments" id="comments" style="font-family:sans-serif;font-size:1.2em;">
-
-</textarea>
-
-</div>
-
-<input type="submit" value="Submit">
-
-</form>
+<div class="fb-comments" data-href="https://raselweb.github.io/bd/index.html" data-width="" data-numposts="5"></div>
+	  
 
 
 			
