--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
 		
 	</div>
 	<div class="ns2">
-		<marquee scrolldelay="250">
+		<marquee>
 
 		
 		
@@ -515,9 +515,9 @@
 		
 	
 		
-		<a href="#" >স্বাগতম আমার নতুন ডিজিটাল শিক্ষাগত ওয়েবসাইট পরির্শনের জন্য। "জাতীয় বিশ্ববিদ্যালয়ের অধীনে অনুষ্ঠিতব্য
+		<a href="#" >স্বাগতম আমার নতুন ডিজিটাল শিক্ষাগত ওয়েবসাইট পরির্শনের জন্য। <img src="http://nu.ac.bd/assets/images/new-news.gif"width="40px"height="13px"> "জাতীয় বিশ্ববিদ্যালয়ের অধীনে অনুষ্ঠিতব্য
 
-<img src="http://nu.ac.bd/assets/images/new-news.gif"width="40px"height="13px"> আগামী ০৯/১১/২০১৯ তারিখের সকল পরীক্ষা
+আগামী ০৯/১১/২০১৯ তারিখের সকল পরীক্ষা
 
 দুর্যোগপূর্ণ আবহাওয়ার কারনে স্থগিত ঘোষণা করা
 
