--- a/index.html
+++ b/index.html
@@ -135,6 +135,9 @@
 					    height:75px;
 					    margin:0px 0px 0px 30px;
 				 }
+				    iframe{
+					    color:white}
+					    }
 			</style>
                             
                             <iframe src="http://free.timeanddate.com/clock/i713wjvi/n73/tlbd43/fn15/tt0/tw0/th2" frameborder="0"></iframe>
