--- a/index.html
+++ b/index.html
@@ -136,8 +136,9 @@
 					    margin:0px 0px 0px 30px;
 				 }
 				    iframe{
-					    color:white}
-					    }
+					    color:white;
+				    }
+					    
 			</style>
                             
                             <iframe src="http://free.timeanddate.com/clock/i713vwxo/n73/tlbd43/fn15/tt0/tw0/tm1/tb1" frameborder="0" width="172" height="21"></iframe>
