--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 		 <div class="sixteen columns">
                 <div class="slide-panel-btns">
                     <div class="twelve columns">
-                                                <div class="slide-panel-button" style="display: block;">বাংলাদেশ জাতীয় তথ্য বাতায়ন </div>
+                                                <div class="slide-panel-button" style="display: block;">স্বাগতম আমায় ডিজিটাল ওয়েবসাইট পরিদর্শন করার জন্য</div>
 
                                             </div>
 
