--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	    
 	    
 	    <head>
+		    <meta name="google-site-verification" content="TN7v7puMLB97R6DaQzZb_11mrnI1mSz6kFpqRGW62fc" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
                     <meta http-equiv="X-Frame-Options" content="deny">
