--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                                 <a target="_blank" href="https://free.facebook.com/My-educational-story46-108519113824895/">
                                     <img src="themes/responsive_npf/templates/bangladesh/images/facebook-icon.png" />
                                 </a>
-                                <a target="_blank" href="../external.html?link=https://twitter.com/a2i_bd">
+                                <a target="_blank" href="https://twitter.com/KhanRas27783773">
                                     <img src="themes/responsive_npf/templates/bangladesh/images/twitter-blue-icon.png" />
                                 </a>
                                 <a target="_blank" href="https://www.youtube.com/channel/UCoNLjOAI-R2IWssxwuvuNMQ">
