--- a/index.html
+++ b/index.html
@@ -518,16 +518,10 @@
 		
 	
 		
-		<a href="#" >স্বাগতম আমার নতুন ডিজিটাল শিক্ষাগত ওয়েবসাইট পরির্শনের জন্য। <img src="http://nu.ac.bd/assets/images/new-news.gif"width="40px"height="13px"> "জাতীয় বিশ্ববিদ্যালয়ের অধীনে অনুষ্ঠিতব্য
+		<a href="#" >স্বাগতম আমার নতুন ডিজিটাল শিক্ষাগত ওয়েবসাইট পরির্শনের জন্য। 
+        <img src="http://nu.ac.bd/assets/images/new-news.gif"width="40px"height="13px"><a href="" >জাতীয় বিশ্ববিদ্যালয়ের অধীনে অনার্স ৩য় বর্ষের পরীক্ষা শুরু হতে যাচ্ছে আগামী ২/১/২০২০ইং।</a>
 
-আগামী ০৯/১১/২০১৯ তারিখের সকল পরীক্ষা
-
-দুর্যোগপূর্ণ আবহাওয়ার কারনে স্থগিত ঘোষণা করা
-
-হল। এ সকল পরীক্ষার পরিবর্তিত তারিখ ও সময়
-
-সংশ্লিষ্ট সকলকে পরবর্তীতে অবহিত করা হবে।</a>
-	<img src="http://nu.ac.bd/assets/images/new-news.gif"width="40px"height="13px"><a href="" > জুনিয়র স্কুল এন্ড মাদ্রাসার পরীক্ষা শুরু হতে যাচ্ছে ০২/১১/২০১৯।</a>
+	
 	<img src="http://nu.ac.bd/assets/images/new-news.gif"width="40px"height="13px"><a href="" > মাধ্যমিক স্কুল এন্ড মাদ্রাসার কেন্দ্রীয় পরীক্ষা অনুষ্ঠিত হতে যাচ্ছে আগামী ০২/০২/২০২০ ইং।</a>
 	</marquee>
 	<style type="text/css">
