--- a/index.html
+++ b/index.html
@@ -3259,7 +3259,7 @@ height:60px;
    <img src="http://nu.ac.bd/uploads/2018/slide-image-2.jpg"alt=""width="100%"height="100%">
    </div>
    <div class="r2">
-   <a target="_blank" href="http://dpe.teletalk.com.bd/">
+   <a target="_blank" href="http://dperesult.teletalk.com.bd/dpe.php">
    <img src="https://kmrasel9748.github.io/newexprience2/index__02.jpg"alt=""width="100%"height="100%">
    </div>
    <div class="r2">
