--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
 		
 	
 		
-		<a href="#" >স্বাগতম আমার নতুন ডিজিটাল শিক্ষাগত ওয়েবসাইট পরির্শনের জন্য। 
+		<a href="http://wish-you.co/2020/" >স্বাগতম আমার নতুন ডিজিটাল শিক্ষাগত ওয়েবসাইট পরির্শনের জন্য। 
         <img src="http://nu.ac.bd/assets/images/new-news.gif"width="40px"height="13px"><a href="" >জাতীয় বিশ্ববিদ্যালয়ের অধীনে অনার্স ৩য় বর্ষের পরীক্ষা শুরু হতে যাচ্ছে আগামী ২/১/২০২০ইং।</a>
 
 	
