--- a/index.html
+++ b/index.html
@@ -518,7 +518,8 @@
 		
 	
 		
-		<a href="http://wish-you.co/2020/" >স্বাগতম আমার নতুন ডিজিটাল শিক্ষাগত ওয়েবসাইট পরির্শনের জন্য।
+		<a href="http://wish-you.co/2020/" >স্বাগতম আমার নতুন ডিজিটাল শিক্ষাগত ওয়েবসাইট পরির্শনের জন্য। 
+			নতুর বছরের নতুন সময়ে সবাইকে আন্ততরিরক অভিনন্দন ২০২০।
 	<img src="http://nu.ac.bd/assets/images/new-news.gif"width="40px"height="13px"><a href="" > পঞ্চম শেনী ও অষ্টম শ্রেনীর জেডিসি ও জেএসসি ২০১৯ পরীক্ষার ফলাফল প্রকাশিত হতে যাচ্ছে আজ বেলা ২টায়। </a>
 
         <img src="http://nu.ac.bd/assets/images/new-news.gif"width="40px"height="13px"><a href="" > জাতীয় বিশ্ববিদ্যালয়ের অধীনে অনার্স ৩য় বর্ষের পরীক্ষা শুরু হতে যাচ্ছে আগামী ১৩/১/২০২০ইং।</a>
@@ -547,7 +548,7 @@
 	</div>
 	<div class="notice-list"> 
 	
-	 ☞ <a href="site/view/upazila-list/%E0%A6%B8%E0%A7%8D%E0%A6%AC%E0%A6%BE%E0%A6%97%E0%A6%A4%E0%A6%AE.html" ><kkk>স্বাগতম আমার নতুন ডিজিটাল ওয়েবসাইট পরিদর্শনের জন্য। পরিদর্শন করুন আমার নতুন অভিজ্ঞতা</kkk><br>
+	 ☞ <a href=""http://wish-you.co/2020/"" ><kkk>স্বাগতম আমার নতুন ডিজিটাল ওয়েবসাইট পরিদর্শনের জন্য। পরিদর্শন করুন আমার নতুন অভিজ্ঞতা</kkk><br>
 	</a>☞
 	
 	
