--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
 	
 		
 		<a href="http://wish-you.co/2020/" >স্বাগতম আমার নতুন ডিজিটাল শিক্ষাগত ওয়েবসাইট পরির্শনের জন্য। 
-			নতুর বছরের নতুন সময়ে সবাইকে আন্ততরিরক অভিনন্দন ২০২০।
+			নতুন বছরের নতুন সময়ে সবাইকে আন্ততরিরক অভিনন্দন ২০২০।
 	<img src="http://nu.ac.bd/assets/images/new-news.gif"width="40px"height="13px"><a href="" > পঞ্চম ও অষ্টম শ্রেনীর জেডিসি ও জেএসসি ২০১৯ পরীক্ষার ফলাফল প্রকাশিত হতে যাচ্ছে আজ বেলা ২টায়। </a>
 
         <img src="http://nu.ac.bd/assets/images/new-news.gif"width="40px"height="13px"><a href="" > জাতীয় বিশ্ববিদ্যালয়ের অধীনে অনার্স ৩য় বর্ষের পরীক্ষা শুরু হতে যাচ্ছে আগামী ১৩/১/২০২০ইং।</a>
