--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                         <div class="one-col">
                             <h6></h6>
                             <ul class="mzr-links">
-                                <li><a href="http://dpe.teletalk.com.bd/">ডি পি ই</a></li>
+                                <li><a href="http://dperesult.teletalk.com.bd/dpe.php">ডি পি ই</a></li>
                                 <li><a href="http://www.nu.ac.bd/results/">মাষ্টার্স- এম এ</a></li>
                                 <li><a href="http://www.nu.ac.bd/results/">ডিগ্রি পাশ</a></li>
                                 <li><a href="site/page/27dad83d-754c-4dbb-b91a-b54ef097f98f/%e0%a6%ac%e0%a6%be%e0%a6%82%e0%a6%b2%e0%a6%be%e0%a6%a6%e0%a7%87%e0%a6%b6%e0%a7%87%e0%a6%b0-%e0%a6%ac%e0%a7%8d%e0%a6%af%e0%a6%ac%e0%a6%b8%e0%a6%be%e0%a7%9f%e0%a6%bf%e0%a6%95-%e0%a6%b8%e0%a6%82%e0%a6%97%e0%a6%a0%e0%a6%a8%e0%a6%b8%e0%a6%ae%e0%a7%82%e0%a6%b9.html">কারিগরি শিক্ষা-(কম.)</a></li>
@@ -2120,7 +2120,7 @@
                                                                                 <img src="http://nu.ac.bd/uploads/2018/slide-image-2.jpg" alt="" width="100%" height="100%">
                                                                                 </div>
                                                                                 <div class="r2">
-                                                                                <a target="_blank" href="http://dpe.teletalk.com.bd/">
+                                                                                <a target="_blank" href="http://dperesult.teletalk.com.bd/dpe.php">
                                                                                 <img src="https://kmrasel9748.github.io/newexprience2/index__02.jpg" alt="" width="100%" height="100%">
                                                                                 </div>
                                                                                 <div class="r2">
