--- a/index.html
+++ b/index.html
@@ -550,9 +550,9 @@
 			নতুন বছরের নতুন সময়ে সবাইকে আন্ততরিরক অভিনন্দন ২০২০।
 	<img src="http://nu.ac.bd/assets/images/new-news.gif"width="40px"height="13px"><a href="" > পঞ্চম ও অষ্টম শ্রেনীর জেডিসি ও জেএসসি ২০১৯ পরীক্ষার ফলাফল প্রকাশিত হতে যাচ্ছে আজ বেলা ২টায়। </a>
 
-                                <img src="http://nu.ac.bd/assets/images/new-news.gif" width="40px" height="13px"><a href=""> জাতীয় বিশ্ববিদ্যালয়ের অধীনে অনার্স ৩য় বর্ষের পরীক্ষা শুরু হতে যাচ্ছে আগামী ১৩/১/২০২০ইং।</a>
+                                <img src="http://nu.ac.bd/assets/images/new-news.gif" width="40px" height="13px"><a href=""> জাতীয় বিশ্ববিদ্যালয়ের অধীনে অনার্স ৩য় বর্ষের পরীক্ষা শুরু হতে যাচ্ছে আগামী ৩/০২/২০২০ইং।</a>
 
-                                <img src="http://nu.ac.bd/assets/images/new-news.gif" width="40px" height="13px"><a href=""> মাধ্যমিক স্কুল এন্ড মাদ্রাসার কেন্দ্রীয় পরীক্ষা অনুষ্ঠিত হতে যাচ্ছে আগামী ০২/০২/২০২০ ইং।</a>
+                                <img src="http://nu.ac.bd/assets/images/new-news.gif" width="40px" height="13px"><a href="https://notunsokaal.com/ssc-exam-routine/"> মাধ্যমিক স্কুল এন্ড মাদ্রাসার কেন্দ্রীয় পরীক্ষা অনুষ্ঠিত হতে যাচ্ছে আগামী ০৩/০২/২০২০ ইং।</a>
                             </marquee>
                             <style type="text/css">
                                 marquee a {
