--- a/index.html
+++ b/index.html
@@ -2614,7 +2614,7 @@
                                                                                 <div class="k">
                                                                                 <h3><q>ইলেকট্রিশিয়ান এন্ড আর্টিসম্যান</q></h3>
                                                                                 
-                                                                                <img src="https://kmrasel9748.github.io/tk/bteb.portal.gov.bd/sites/default/files/files/bteb.portal.gov.bd/office_head/1bd1ba9d_0a6c_445f_8e0c_e0b6b2e8180a/Deputy%20Minister1.jpg" width="250px" height="200">
+                                                                                <img src="Untitled-1.jpg" width="250px" height="200">
                                                                                 <h4>কে,এম রাসেল,<span>বি.এ (অনার্স)</span></h4>
                                                                                 <hk><a href="https://kmrasel9748.github.io/tk/bteb.gov.bd/site/office_head/a0039c37-ce2a-40f7-b15c-07507c17c98e/%e0%a6%ac%e0%a6%bf%e0%a6%b8%e0%a7%8d%e0%a6%a4%e0%a6%be%e0%a6%b0%e0%a6%bf%e0%a6%a4.html">বিস্তারিত.....</a></hk>
                                                                                 </div>
