--- a/index.html
+++ b/index.html
@@ -2621,7 +2621,7 @@
                                                                                 <div class="k">
                                                                                 <h3><q>কম্পিউটার টাইপিং</q></h3>
                                                                                 
-                                                                                <img src="https://kmrasel9748.github.io/tk/bteb.portal.gov.bd/sites/default/files/files/bteb.portal.gov.bd/office_head/0237bfdd_a885_4859_99b4_127d13531ae2/scan0014.jpg" width="250px" height="200">
+                                                                                <img src="1575193258555_plus.jpg" width="250px" height="200">
                                                                                 <h4>কে,এম রাসেল,<span>বি.এ (অনার্স)</span></h4>
                                                                                 <hk><a href="https://kmrasel9748.github.io/tk/bteb.gov.bd/site/office_head/fa5da682-1a1b-4f03-891c-91218b45b7aa/%e0%a6%ac%e0%a6%bf%e0%a6%b8%e0%a7%8d%e0%a6%a4%e0%a6%be%e0%a6%b0%e0%a6%bf%e0%a6%a4.html">বিস্তারিত.....</a></hk>
                                                                                 </div>
